...
            Build lasting community.
          </Text>
        </View>

        <View style={styles.buttons}>
          <BubbleButton
            title="Sign Up"
            onPress={() => navigation.navigate('Signup')}
            testID="button-sign-up"
          />

          <BubbleButton
            title="Log In"
            variant="outline"
            onPress={() => navigation.navigate('Login')}
...
